--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -67,7 +67,8 @@
                                 <i class="bi bi-google me-2"></i> Continuer avec Google
                             </a>
                             <a class="btn btn-primary btn-lg btn-block"
-                               style="background-color: #3b5998; border-color: #3b5998;" href="#!"
+                               style="background-color: #3b5998; border-color: #3b5998;"
+                               href="{{ path('connect_facebook') }}"
                                role="button">
                                 <i class="bi bi-facebook me-2"></i>Continuer avec Facebook
                             </a>
