--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -42,7 +42,7 @@
                                 <input class="form-check-input" id="remember" type="checkbox" name="_remember_me">
                                 <label class="form-check-label" for="remember"> Se souvenir de moi </label>
                             </div>
-                            <a href="#!">Password oublié ?</a>
+                            <a href="{{ path("app_forgot_password_request") }}">Password oublié ?</a>
                         </div>
 
                         <input type="hidden" name="_csrf_token"
@@ -59,7 +59,7 @@
                             <p class="text-center fw-bold mx-3 mb-0 text-muted">OU</p>
                         </div>
 
-                        <div class="divider d-flex align-items-center my-4">
+                        <div class="divider d-flex align-items-center my-2">
                             <a class="btn btn-lg btn-block btn-danger"
                                style="background-color: #dd4b39; border-color: #dd4b39;"
                                href="{{ path('connect_google') }}"
@@ -67,10 +67,17 @@
                                 <i class="bi bi-google me-2"></i> Continuer avec Google
                             </a>
                             <a class="btn btn-primary btn-lg btn-block"
-                               style="background-color: #3b5998; border-color: #3b5998;"
+                               style="background-color: #3b5998; border-color: #3b5998; margin-left:10px"
                                href="{{ path('connect_facebook') }}"
                                role="button">
                                 <i class="bi bi-facebook me-2"></i>Continuer avec Facebook
+                            </a>
+                        </div>
+                        <div class="d-flex justify-content-around align-items-center">
+                            <a class="btn btn-secondary btn-lg btn-block"
+                               href="{{ path('app_register') }}"
+                               role="button">
+                                S'inscrire
                             </a>
                         </div>
 
