--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -11,7 +11,7 @@
                     <div class="card-body">
                         <div class="mb-4">
                             <h5>Mot de passe oublié ?</h5>
-                            <p class="mb-2">Entrer votre email pour réinitialiser le mot de passe
+                            <p class="mb-2">Entrez votre email pour réinitialiser le mot de passe
                             </p>
                         </div>
                         {{ form_start(requestForm) }}
@@ -20,7 +20,7 @@
                         </div>
                         <div class="mb-3 d-grid">
                             <button type="submit" class="btn btn-primary">
-                                Réinitialiser Password
+                                Réinitialiser le mot de passe
                             </button>
                         </div>
                         <span>Vous n'avez pas encore de compte ? <a
