--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,116 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<div class="container-fluid">
+    <div class="container">
+        {{ form_start(form) }}
+
+        <!-- Title -->
+        <div class="d-flex justify-content-between align-items-lg-center py-3 flex-column flex-lg-row">
+            <h2 class="h5 mb-3 mb-lg-0"><a href="{{ path('admin') }}" class="text-muted"><i
+                            class="bi bi-arrow-left-square me-2"></i></a> Editer mon compte</h2>
+            <div class="hstack gap-3">
+                <a href="{{ path('admin') }}" class="btn btn-light btn-sm btn-icon-text"><i class="bi bi-x"></i> <span
+                            class="text">Cancel</span></a>
+                <button class="btn btn-primary btn-sm btn-icon-text"><i class="bi bi-save"></i> <span
+                            class="text">Save</span></button>
+            </div>
+        </div>
+
+        <!-- Main content -->
+        <div class="row">
+            <!-- Left side -->
+            <div class="col-lg-8">
+                <!-- Basic information -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h3 class="h6 mb-4 fw-bold">Information de contact</h3>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    {{ form_row(form.prenom) }}
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    {{ form_row(form.nom) }}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    {{ form_row(form.email) }}
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    {{ form_row(form.telephone) }}
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    {{ form_row(form.username) }}
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    {{ form_row(form.dateNaissance) }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Address -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h3 class="h6 mb-4">Adresse</h3>
+                        <div class="mb-3">
+                            {{ form_row(form.adresse) }}
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    {{ form_row(form.pays) }}
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    {{ form_row(form.ville) }}
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    {{ form_row(form.codePostal) }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Right side -->
+            <div class="col-lg-4">
+                <!-- Status -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        {{ form_row(form.type) }}
+                    </div>
+                </div>
+                <!-- Avatar -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h3 class="h6">Avatar</h3>
+                        <input class="form-control" type="file">
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{ form_end(form) }}
+    </div>
+</div>
+
+
+
