--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -4,10 +4,10 @@
 
         <!-- Title -->
         <div class="d-flex justify-content-between align-items-lg-center py-3 flex-column flex-lg-row">
-            <h2 class="h5 mb-3 mb-lg-0"><a href="{{ path('admin') }}" class="text-muted"><i
+            <h2 class="h5 mb-3 mb-lg-0"><a href="{{ path('projets') }}" class="text-muted"><i
                             class="bi bi-arrow-left-square me-2"></i></a> Editer mon compte</h2>
             <div class="hstack gap-3">
-                <a href="{{ path('admin') }}" class="btn btn-light btn-sm btn-icon-text"><i class="bi bi-x"></i> <span
+                <a href="{{ path('projets') }}" class="btn btn-light btn-sm btn-icon-text"><i class="bi bi-x"></i> <span
                             class="text">Cancel</span></a>
                 <button class="btn btn-primary btn-sm btn-icon-text"><i class="bi bi-save"></i> <span
                             class="text">Save</span></button>
