--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Password Reset Email Sent{% endblock %}
-
+{% block title %}Email de réinitialisation du mode passe envoyé{% endblock %}
+g
 {% block body %}
     <div class="container">
         <div class="card">
