--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -5,10 +5,13 @@
         <div class="container py-1 text-center">
             <h1 class="display-5 fw-bold">Liste des projets</h1>
             <div class="row justify-content-center mb-3">
-                <div class="input-group">
-                    <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-                           aria-describedby="search-addon"/>
-                </div>
+                <form action="">
+                    <div class="input-group">
+                        <input class="form-control border-end-0 border" type="search" placeholder="Search"
+                               id="example-search-input">
+                        <button class="btn btn-outline-dark" type="submit">Search</button>
+                    </div>
+                </form>
             </div>
         </div>
     </section>
@@ -65,12 +68,12 @@
                                         <h6 class="text-success">Place(s) restante(s)
                                             : {{ 3 - projet.equipe.count }}</h6>
                                         <div class="d-flex flex-column mt-4">
-                                            {% if (app.user and projet.containUser(app.user) == false) or app.user is empty %}
+                                            {% if (app.user and projet.containUser(app.user) == false and app.user.isEtudiant) or app.user is empty %}
                                                 <a href="{{ path('app_projet_adduser',{id: projet.id}) }}"
                                                    class="btn btn-primary btn-sm"
                                                    type="button">Rejoindre le projet
                                                 </a>
-                                            {% else %}
+                                            {% elseif(app.user and projet.containUser(app.user) == true and app.user.isEtudiant) %}
                                                 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                                                     <symbol id="check-circle-fill" viewBox="0 0 16 16">
                                                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
@@ -94,6 +97,8 @@
                                                         Déjà dans le projet
                                                     </div>
                                                 </div>
+                                            {% else %}
+
                                             {% endif %}
                                         </div>
                                     </div>
