--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
+{% block menu %}{% endblock %}
 
 {% block body %}
     <section class="vh-100">
@@ -16,12 +17,6 @@
                             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                         {% endif %}
 
-                        {% if app.user %}
-                            <div class="mb-3">
-                                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                            </div>
-                        {% endif %}
-                        <!-- Email input -->
                         <div class="form-outline mb-4">
                             <input type="email" value="{{ last_username }}" name="_username" id="inputEmail"
                                    class="form-control form-control-lg"
