--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -31,12 +31,14 @@
                                         </div>
                                     </div>
 
-                                    <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            {{ form_row(registrationForm.type) }}
+                                    {% if registrationForm.type is defined %}
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                {{ form_row(registrationForm.type) }}
+                                            </div>
                                         </div>
-                                    </div>
+                                    {% endif %}
 
                                     <div class="form-check d-flex justify-content-center mb-5">
                                         {{ form_row(registrationForm.agreeTerms) }}
