--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -13,3 +13,16 @@ label.required:after {
 #liveToast {
   width: 450px
 }
+
+.anone {
+  text-decoration: none;
+  color: inherit;
+}
+
+trix-editor, trix-toolbar {
+  background-color: white
+}
+
+trix-toolbar .trix-button-group {
+  margin-bottom: 0px !important;
+}
