--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,12 @@
     <link rel="icon"
           href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     {% block stylesheets %}
+        <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.0/dist/trix.css">
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
 
     {% block javascripts %}
+        <script type="text/javascript" src="https://unpkg.com/trix@2.0.0/dist/trix.umd.min.js"></script>
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </head>
