--- a/templates/projet/edit.html.twig
+++ b/templates/projet/edit.html.twig
@@ -3,11 +3,5 @@
 {% block title %}Edit Projet{% endblock %}
 
 {% block body %}
-    <h1>Edit Projet</h1>
-
-    {{ include('projet/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_projet_index') }}">back to list</a>
-
-    {{ include('projet/_delete_form.html.twig') }}
+    {{ include('projet/_form.html.twig', {action: 'Editer'}) }}
 {% endblock %}
