--- a/templates/projet/list.twig
+++ b/templates/projet/list.twig
@@ -4,12 +4,20 @@
     <section>
         <div class="container py-1 text-center">
             <h1 class="display-5 fw-bold">Liste des projets</h1>
+            {% if app.user.entrepreneur %}
+                <div class="align-content-center align-items-center mt-3 mb-3">
+                    <a href="{{ path('app_projet_new') }}" class="flex align-content-center  btn btn-primary"
+                       type="submit"><i
+                                class="bi bi-plus"></i>Ajouter
+                        un projet</a>
+                </div>
+            {% endif %}
             <div class="row justify-content-center mb-3">
                 <form action="">
                     <div class="input-group">
                         <input class="form-control border-end-0 border" type="search" placeholder="Search"
                                id="example-search-input">
-                        <button class="btn btn-outline-dark" type="submit">Search</button>
+                        <button class="btn btn-dark" type="submit">Search</button>
                     </div>
                 </form>
             </div>
@@ -25,15 +33,15 @@
                                 <div class="row">
                                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                         <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                                            {% set image = '/uploads/projets/projet.jpg' %}
-                                            {% if projet.image is not empty %}
-                                                <img src="{{ asset('/uploads/projets/')~projet.image }}"
-                                                     class="w-100"/>
-                                            {% else %}
-                                                <img src="{{ asset(image) }}"
-                                                     class="w-100"/>
-                                            {% endif %}
-                                            <a href="{{ path('projets') }}">
+                                            <a href="{{ path('app_projet_show', {id: projet.id}) }}">
+                                                {% set image = '/uploads/projets/projet.jpg' %}
+                                                {% if projet.image is not empty %}
+                                                    <img src="{{ asset('/uploads/projets/')~projet.image }}"
+                                                         class="w-100"/>
+                                                {% else %}
+                                                    <img src="{{ asset(image) }}"
+                                                         class="w-100"/>
+                                                {% endif %}
                                                 <div class="hover-overlay">
                                                     <div class="mask"
                                                          style="background-color: rgba(253, 253, 253, 0.15);"></div>
@@ -42,7 +50,8 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-xl-6">
-                                        <a style="text-decoration: none;color: inherit;" href="{{ path('projets') }}">
+                                        <a style="text-decoration: none;color: inherit;"
+                                           href="{{ path('app_projet_show', {id: projet.id}) }}">
                                             <h5>{{ projet.titre }}</h5>
                                             <div class="d-flex flex-row">
                                                 <span>{{ projet.owner }}</span>
