--- a/templates/projet/new.html.twig
+++ b/templates/projet/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Projet{% endblock %}
 
 {% block body %}
-    <h1>Create new Projet</h1>
 
-    {{ include('projet/_form.html.twig') }}
+    {{ include('projet/_form.html.twig',{action: "Créer"}) }}
 
-    <a href="{{ path('app_projet_index') }}">back to list</a>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
 {% endblock %}
