--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -59,9 +59,9 @@
                     </div>
                 </div>
 
-                <div class="card mb-4">
+                <div id='competences' style="display: none;" class="card mb-4">
                     <div class="card-body">
-                        <h3 class="h6 mb-4">Compétences</h3>
+                        <h3 class="h6 mb-4">Compétences et savoir faire</h3>
                         <div class="row">
                             <div class="col-lg-12">
                                 {{ form_row(form.niveau) }}
