--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -126,6 +126,8 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         {{ form_row(form.type) }}
+                        <small class="form-text mb-0 help-text">Entrepreneur créateur de projets<br>Etudiant chercheur
+                            de projets</small>
                     </div>
                 </div>
                 <!-- Avatar -->
