--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -26,11 +26,16 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li class="nav-item dropdown-item">
+                                    {{ app.user }}
+
+                                </li>
+                                <hr class="dropdown-divider">
+                                <li class="nav-item dropdown-item">
                                     <a href="{{ path('app_user_edit',{id: app.user.id}) }}" class="nav-link">Mes
                                         informations</a>
                                 </li>
                                 <li class="nav-item dropdown-item">
-                                    <a href="" class="nav-link">Mes
+                                    <a href="{{ path('mes_projets') }}" class="nav-link">Mes
                                         projets</a>
                                 </li>
                                 {% if is_granted('ROLE_ADMIN') %}
