--- a/templates/projet/list.twig
+++ b/templates/projet/list.twig
@@ -116,6 +116,11 @@
 
                                             {% endif %}
                                         </div>
+                                        {% if app.user.entrepreneur is defined and app.user.entrepreneur and projet.owner == app.user %}
+                                            <a style='position: absolute; bottom: 10px;right: 10px'
+                                               href="{{ path('app_projet_edit',{id:projet.id}) }}"
+                                               class="btn btn-sm btn-primary">Editer</a>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
