--- a/templates/projet/list.twig
+++ b/templates/projet/list.twig
@@ -29,7 +29,7 @@
                 <div class="row justify-content-center mb-3">
                     <div class="col-md-12 col-xl-10">
                         <div class="card shadow-0 border rounded-3">
-                            <div class="card-body">
+                            <div style="min-height: 150px" class="card-body">
                                 <div class="row">
                                     <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                         <div class="bg-image hover-zoom ripple rounded ripple-surface">
@@ -82,22 +82,17 @@
                                         </div>
                                         <h6 class="text-success">Place(s) restante(s)
                                             : {{ 3 - projet.equipe.count }}</h6>
-                                        <div class="d-flex flex-column mt-4">
+                                        <div class="d-flex mt-4">
                                             {% if (app.user and projet.containUser(app.user) == false and app.user.isEtudiant) or app.user is empty %}
                                                 <a href="{{ path('app_projet_adduser',{id: projet.id}) }}"
-                                                   class="btn btn-primary btn-sm"
-                                                   type="button">Rejoindre le projet
+                                                   class="btn btn-outline-success btn-sm mt-2"
+                                                   style="position:absolute; bottom:15px; right: 15px"
+                                                   type="button">Rejoindre
                                                 </a>
                                             {% elseif(app.user and projet.containUser(app.user) == true and app.user.isEtudiant) %}
                                                 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                                                     <symbol id="check-circle-fill" viewBox="0 0 16 16">
                                                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                                                    </symbol>
-                                                    <symbol id="info-fill" viewBox="0 0 16 16">
-                                                        <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
-                                                    </symbol>
-                                                    <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
-                                                        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                                                     </symbol>
                                                 </svg>
                                                 <div class="alert text-success alert-success d-flex align-items-center"
@@ -112,15 +107,13 @@
                                                         Déjà dans le projet
                                                     </div>
                                                 </div>
+                                            {% elseif app.user.entrepreneur is defined and app.user.entrepreneur and projet.owner == app.user %}
+                                                <a style='position: absolute; bottom: 10px;right: 10px'
+                                                   href="{{ path('app_projet_edit',{id:projet.id}) }}"
+                                                   class="btn btn-sm btn-outline-warning">Editer</a>
                                             {% else %}
-
                                             {% endif %}
                                         </div>
-                                        {% if app.user.entrepreneur is defined and app.user.entrepreneur and projet.owner == app.user %}
-                                            <a style='position: absolute; bottom: 10px;right: 10px'
-                                               href="{{ path('app_projet_edit',{id:projet.id}) }}"
-                                               class="btn btn-sm btn-primary">Editer</a>
-                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
