--- a/templates/projet/show.html.twig
+++ b/templates/projet/show.html.twig
@@ -8,7 +8,7 @@
         <div class="col-md-10">
             <div class="card">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-lg-6 order-3">
                         <div class="images p-3">
                             <div class="text-center p-4">
                                 {% set image = '/uploads/projets/projet.jpg' %}
@@ -32,7 +32,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-lg-6 order-1">
                         <div class="product p-4">
                             <div class="d-flex justify-content-between align-items-center">
                                 <a class="anone" href="{{ path("projets") }}">
