--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -4,8 +4,7 @@
 
 {% block body %}
     <div class="container d-flex flex-column">
-        <div class="row align-items-center justify-content-center
-          min-vh-100">
+        <div class="row align-items-center justify-content-center">
             <div class="col-12 col-md-8 col-lg-4">
                 <div class="card shadow-sm">
                     <div class="card-body">
