--- a/templates/projet/_form.html.twig
+++ b/templates/projet/_form.html.twig
@@ -92,6 +92,11 @@
                         {{ form_row(form.skills) }}
                     </div>
                 </div>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        {{ form_row(form.type) }}
+                    </div>
+                </div>
             </div>
         </div>
         {{ form_end(form) }}
