--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -61,7 +61,7 @@
 
                 <div id='competences' style="display: none;" class="card mb-4">
                     <div class="card-body">
-                        <h3 class="h6 mb-4">Compétences et savoir faire</h3>
+                        <h3 class="h6 mb-4">Compétences et préférences</h3>
                         <div class="row">
                             <div class="col-lg-12">
                                 {{ form_row(form.niveau) }}
@@ -69,18 +69,8 @@
                             <div class="col-lg-12">
                                 {{ form_row(form.skills) }}
                             </div>
-                            <div class="col-lg-12">
-                                {{ form_row(form.frameworks) }}
-                            </div>
-                            <div class="col-lg-6">
-                            </div>
                         </div>
-                        <hr>
-                        <h3 class="h6 mb-4">Préférences</h3>
                         <div class="row">
-                            <div class="col-lg-12">
-                                {{ form_row(form.preference) }}
-                            </div>
                             <div class="col-lg-12">
                                 {{ form_row(form.interets) }}
                             </div>
