--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -17,7 +17,7 @@
         <!-- Main content -->
         <div class="row">
             <!-- Left side -->
-            <div class="col-lg-8">
+            <div class="order-1 order-lg-0 col-lg-8">
                 <!-- Basic information -->
                 <div class="card mb-4">
                     <div class="card-body">
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <!-- Right side -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 order-0">
                 <!-- Status -->
                 <div class="card mb-4">
                     <div class="card-body">
